test/distributions/bradc/wrongDomForDist/wrongType4.compopts
DummyAssocDist.chpl --main-module wrongType4
